[package]
name = "candle-serve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
candle-core = "0.6.0"
candle-nn = "0.6.0"
candle-transformers = "0.6.0"
clap = { version = "4.5.17", features = ["derive"] }
hf-hub = "0.3.2"
serde_json = "1.0.128"
tokenizers = "0.20.0"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
